--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.75);
-		font-family: "gadugi";
+		font-family: "";
 		font-size: 15pt;
 		font-weight: 100;
 		line-height: 1.75em;
