--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ input, select, textarea {
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: 300;
-        font-family: "tangerine";
+        font-family: 'Tangerine', cursive;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
